# AiRoundTablewMe

./: README.md
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/api/: anthropic.rs  gemini.rs  mod.rs  openai.rs  system_prompt.rs
backend/src/models/: messages.rs
backend/src/routes/: chat.rs  mod.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AiResponse.tsx  AiRoundtable.tsx  ChatInput.tsx  RoundTable.tsx  SettingsModal.tsx
frontend/src/context/: SettingsContext.tsx
frontend/src/services/: api.ts
