[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
dotenv = "0.15.0"
env_logger = "0.11.7"
log = "0.4.27"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
async-trait = "0.1.88"
